--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "cmath": "c"
+        "cmath": "c",
+        "float.h": "c",
+        "stdint.h": "c",
+        "stdbool.h": "c"
     }
 }
